Small fixes on image spacing and Mobile opertimsation

--- a/src/styles/FullWidthComponent.css
+++ b/src/styles/FullWidthComponent.css
@@ -3,3 +3,6 @@
   width: 100%;
   height: auto;
 }
+.full-width-column {
+  grid-column: 1 / span 2;
+}
