--- a/src/styles/ImageComponent.css
+++ b/src/styles/ImageComponent.css
@@ -4,6 +4,7 @@
   grid-column: span 2;
   grid-area: image;
   position: relative;
+  
   opacity: 0;
   transition: opacity 0.5s ease, transform 0.5s ease;
   transform: translateY(20px); /* The image starts slightly lower */
@@ -72,6 +73,17 @@
   font-family: 'Inter', sans-serif;
   font-weight: normal;
   margin: 0;
+
+}
+
+.image-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
 }
 
 @media (max-width: 768px) {
