--- a/src/styles/WelcomeEight.css
+++ b/src/styles/WelcomeEight.css
@@ -27,7 +27,7 @@
   word-wrap: break-word;
   hyphens: auto;  
   margin: 0;
-  padding: 0;
+  padding-bottom: 10px;
   box-sizing: border-box;
   margin-top: auto; /* Add this rule to align to the bottom */
 }
@@ -46,7 +46,7 @@
   word-wrap: break-word;
   hyphens: auto;
   margin: 0;
-  padding: 0;
+  padding-bottom: 10px;
   box-sizing: border-box;
   margin-top: auto; /* Add this rule to align to the bottom */
   max-width: 100vw;
@@ -57,7 +57,8 @@
   .welcome-text p {
     /* Existing styles for welcome-text p */
     font-size: 20vw;  /* You can change this value based on your preference */
-    padding: 0;
+    padding-bottom: 0;
+    text-align: right;
     justify-content: flex-end;
     margin-bottom: auto; /* Align to the bottom */
     max-width: 100vw;
@@ -68,7 +69,7 @@
     height: auto;
     justify-content: flex-end;
     font-size: 20vw;
-    text-align: left; /* Align the text to the left */
+    text-align: right; /* Align the text to the left */
     margin-bottom: auto; /* Align to the bottom */
     max-width: 100vw;
   }
