--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -7,94 +7,23 @@ body {
   margin: 0;
   font-family: 'Inter', sans-serif;
   max-width: 100vw;
+  border: none;
+  outline: none;
 }
 
 html {
   scroll-behavior: smooth;
 }
 
-.nav {
-  width: 15vw;
-  position: fixed;
-  top: 0;
-  height: 100vh;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  background-color: #ffffff;
-  font-family: 'Inter', sans-serif;
-  border: none;
-  outline: none;
-  z-index: 2;
-  max-width: 100vw;
-}
-
-.nav__logo {
-  padding-bottom: 0;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;  /* Add this line */
-  border: none;
-  outline: none;
-}
-
-.nav__logo-mobile {
-  display: none;
-  width: auto;  /* Change this from 100% to auto */
-  height: 100%;
-  object-fit: contain;
-}
-
-.nav__logo-desktop {
-  display: block;
-  width: 100%;
-  height: auto;
-  object-fit: contain;
-  max-height: 100%;
-  border: none;
-  outline: none;
-}
-
-.nav__logo-desktop img {
-  width: 100%;
-  height: auto;
-  object-fit: contain;
-  border: none;
-  outline: none;
-}
-
-.nav__links {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  list-style-type: none;
-  padding: 0;
-  margin: 40px;
-  text-decoration: none;
-}
-
-.nav__links li {
-  margin-bottom: 40px;
-}
-
-.nav__links a {
-  text-decoration: none;
-  color: inherit;
-  border-bottom: none;
-  margin-bottom: 10px;
-}
-
-.nav__links li a:hover {
-  color: #000; /* Change this to any color for hover effect */
-}
 
 .content {
   width: 15vw;
   padding: 0px;
+  margin: 0;
   text-decoration: none;
   color: inherit;
+  border: none;
+  outline: none;
 }
 
 .grid-container {
@@ -123,79 +52,7 @@ html {
 
 /* Mobile styles */
 @media (max-width: 768px) {
-  .nav {
-    width: 100%;
-    max-width: 100vw;
-    height: 10vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding: 0;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .nav__logo {
-    justify-content: flex-start;
-  }
-
-
-
-  
-  .nav__logo-mobile {
-    display: block;
-    width: 100%;
-    height: 10vh;
-    max-width: 100vw;
-    object-fit: contain;
-    
-  }
-
-  .nav__logo-desktop {
-    display: none;
-  }
-
-  .nav__links {
-    display: none;
-  }
-
-  .nav__links.show {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow-y: auto;
-  }
-
-  .nav__links li {
-    margin-bottom: 10px;
-  }
-
-  .nav__links a {
-    margin-bottom: 0;
-  }
-
-  .nav__burger-menu {
-    appearance: none;
-    background: none;
-    border: none;
-    max-width: 100
-    ;
-    padding: 0;
-    margin: 0;
-  }
-
-  .nav__burger-icon {
-    width: 24px;
-    height: 24px;
-    margin-right: 20px;
-    border: none;
-    max-width: 100
-    ;
-    background: none;
-    padding: 0;
-    outline: none;
-  }
+ 
 
   .content {
     width: 100%;
